--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <li>What as that scream we heard coming out of HIVE 400?</li>
               <li>A weird Lost horde that were faster and didn't burn in the sun.</li>
               <li>Why did Mr. History take Billy/Rosy?</li>
+			  <li>Where is the Fire Bender and why did they destroy a HIVE?</li>
             </ul>
 
           </div>
