--- a/characters.html
+++ b/characters.html
@@ -359,7 +359,7 @@
             </div>
 
             <!-- History --->
-            <!-- <div class="card other_card">
+            <div class="card other_card">
                 <div class="card-header" style="background-image: url(img/characters/history.png)">
                       <div class="card-header-slanted-edge">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -389,7 +389,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Jade --->
             <div class="card companion_card">
@@ -866,7 +866,7 @@
 
 
             <!-- Samantha --->
-            <!-- <div class="card companion_card">
+            <div class="card companion_card">
                 <div class="card-header" style="background-image: url(img/characters/samantha.jpeg)">
                       <div class="card-header-slanted-edge">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -896,7 +896,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
 
 
@@ -1003,7 +1003,7 @@
 
 
             <!-- The Guy -->
-            <!-- <div class="card companion_card">
+            <div class="card companion_card">
               <div class="card-header" style="background-image: url(img/characters/the_guy.jpg)">
                     <div class="card-header-slanted-edge">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -1033,7 +1033,7 @@
                       </div>
                   </div>
               </div>
-            </div> -->
+            </div>
 
 
             <!-- Thoririn (Anvil) --->
