--- a/index.html
+++ b/index.html
@@ -56,12 +56,14 @@
             </p>            
 
             <p class="pt-16 text-4xl text-center">Mysteries</p>
-            <ul class="list-inside md:list-disc text-center">
-              <li>The Riverlands Killer: How did he have an Ender Pearl?</li>
-              <li>What as that scream we heard coming out of HIVE 400?</li>
-              <li>A weird Lost horde that were faster and didn't burn in the sun.</li>
-              <li>Why did Mr. History take Billy/Rosy?</li>
-			  <li>Where is the Fire Bender and why did they destroy a HIVE?</li>
+            <ul class="list-inside md:list-disc" style="margin-left: 40%;">
+              <p class="pt-4 text-xl">Mr. History and Orbital Industries</p>
+                <li class="pl-4">Why did Mr. History take Billy/Rosy?</li>
+              <p class="pt-4 text-xl">???</p>
+                <li class="pl-4">What as that scream we heard coming out of HIVE 400?</li>
+                <li class="pl-4">A weird Lost horde that were faster and didn't burn in the sun.</li>
+                <li class="pl-4">The Riverlands Killer: How did he have an Ender Pearl?</li>
+                <li class="pl-4">Where is the Fire Bender and why did they destroy a HIVE?</li>
             </ul>
 
           </div>
