--- a/characters.html
+++ b/characters.html
@@ -713,7 +713,7 @@
                     <div class="stats">
                         <div class="stat">
                           <span class="label">Combat</span>
-                          <span class="value">A-</span>
+                          <span class="value">A</span>
                         </div>
                         <div class="stat">
                           <span class="label">Intellect</span>
@@ -1268,7 +1268,7 @@
             </div>
 
             <!-- Thomas Williams -->
-            <!-- <div class="card settlement_card">
+            <div class="card settlement_card">
               <div class="card-header" style="background-image: url(img/characters/thomas_williams.jpg)">
                     <div class="card-header-slanted-edge">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -1299,7 +1299,7 @@
                       </div>
                   </div>
               </div>
-            </div> -->
+            </div>
 
             <!-- Three Shot -->
             <!-- <div class="card other_card">
