--- a/characters.html
+++ b/characters.html
@@ -699,7 +699,7 @@
             </div>
 
             <!-- Monkey --->
-            <!-- <div class="card other_card">
+            <div class="card other_card">
                 <div class="card-header" style="background-image: url(img/characters/monkey.jpg)">
                       <div class="card-header-slanted-edge">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -729,7 +729,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Mathus (Anvil) --->
             <!-- <div class="card faction_card">
