--- a/characters.html
+++ b/characters.html
@@ -1024,7 +1024,7 @@
                       </div>
                       <div class="stat">
                           <span class="label">Speech</span>
-                          <span class="value">B-</span>
+                          <span class="value">B+</span>
                       </div>
                   </div>
               </div>
