--- a/characters.html
+++ b/characters.html
@@ -597,7 +597,7 @@
 
 
             <!-- Juno Eclipse -->
-            <!-- <div class="card mysettlement_card">
+            <div class="card mysettlement_card">
               <div class="card-header" style="background-image: url(img/characters/juno_eclpise.png)">
                     <div class="card-header-slanted-edge">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -627,7 +627,7 @@
                       </div>
                   </div>
               </div>
-            </div> -->
+            </div>
 
 
             <!-- Kennedy (Diamondbacks) -->
@@ -932,7 +932,7 @@
             </div> -->
 
             <!-- Ronnie -->
-            <!-- <div class="card settlement_card">
+            <div class="card settlement_card">
               <div class="card-header" style="background-image: url(img/characters/ronnie.jpg)">
                     <div class="card-header-slanted-edge">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -962,7 +962,7 @@
                       </div>
                   </div>
               </div>
-            </div> -->
+            </div>
 
             <!-- Rosy -->
             <!-- <div class="card mysettlement_card">
