--- a/history.html
+++ b/history.html
@@ -114,7 +114,12 @@
             ><img src="img/episodes/am1_ep7.jpg" alt=""></div>
         <div class="content">
             <h2>Episode 7: Mid Summer City</h2>
-            <p> Description </p>
+            <p> Tyler and his crew arrive at Mid Summer City, an impovershed kingdom in the midst of revolution by the Red Baron. In this city on the verge of collapse 
+                they must translate Juno's tablet in order to find the Water Element. During their time there they discover the malicious nature of the King, who has an 
+                underground facility with human experimentation. Along the way Tyler rescues a boy named Roth from slavery. Eventually they find the Water Element at a 
+                temple and agree to help the Red Baron emacipate the city, who turns out to be Monkey. While trying to help the revolution, Tyler is captured by the 
+                King. 
+            </p>
             
         </div>
       </div>
