--- a/characters.html
+++ b/characters.html
@@ -5,13 +5,11 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/card.css">
     <script src="js/jquery-3.3.1.js"></script>
-
     <script src="https://use.fontawesome.com/f92d7d718d.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Adventure Map 2</title>
 </head>
 <body>
-    <!-- This example requires Tailwind CSS v2.0+ -->
     <div>
     <nav class="bg-gray-800">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -161,7 +159,7 @@
             </div> -->
 
             <!-- Bangheart (Anvil) --->
-            <!-- <div class="card faction_card">
+            <div class="card faction_card">
                 <div class="card-header" style="background-image: url(img/characters/anvil_bangheart.jpeg)">
                       <div class="card-header-slanted-edge">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -192,7 +190,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Ben Rabbit -->
             <!-- <div class="card faction_card">
@@ -291,39 +289,6 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
-
-            <!-- Ember -->
-            <!-- <div class="card other_card">
-              <div class="card-header" style="background-image: url(img/characters/ember.jpg)">
-                    <div class="card-header-slanted-edge">
-                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
-                    </div>
-              </div>
-              <div class="card-body">
-                  <h2 class="name">Ember</h2>
-                  <div class="bio">Granddaughter of Ozai and the Fire Bender. Fiery spirit to match her powers, she was given a 2nd chance when Tyler released her from captivity.</div>
-              </div>  
-              <div class="card-footer">
-                  <div class="stats">
-                      <div class="stat">
-                        <span class="label">Combat</span>
-                        <span class="value">A-</span>
-                      </div>
-                      <div class="stat">
-                        <span class="label">Intellect</span>
-                        <span class="value">C-</span>
-                      </div>
-                      <div class="stat">
-                        <span class="label">Agility</span>
-                        <span class="value">C+</span>
-                      </div>
-                      <div class="stat">
-                          <span class="label">Speech</span>
-                          <span class="value">D</span>
-                      </div>
-                  </div>
-              </div>
             </div> -->
 
             <!-- Farcri -->
@@ -595,9 +560,41 @@
               </div>
             </div> -->
 
+            <!-- Julia -->
+             <div class="card mysettlement_card">
+              <div class="card-header" style="background-image: url(img/characters/ember.jpg)">
+                    <div class="card-header-slanted-edge">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
+                    </div>
+              </div>
+              <div class="card-body">
+                  <h2 class="name">Julia</h2>
+                  <div class="bio">Sister of Ramona, she keeps to herself. She seems afraid of something outside the settlement walls.</div>
+              </div>  
+              <div class="card-footer">
+                  <div class="stats">
+                      <div class="stat">
+                        <span class="label">Combat</span>
+                        <span class="value">D-</span>
+                      </div>
+                      <div class="stat">
+                        <span class="label">Intellect</span>
+                        <span class="value">C+</span>
+                      </div>
+                      <div class="stat">
+                        <span class="label">Agility</span>
+                        <span class="value">C+</span>
+                      </div>
+                      <div class="stat">
+                          <span class="label">Speech</span>
+                          <span class="value">D</span>
+                      </div>
+                  </div>
+              </div>
+            </div> 
 
             <!-- Juno Eclipse -->
-            <div class="card mysettlement_card">
+            <div class="card other_card">
               <div class="card-header" style="background-image: url(img/characters/juno_eclpise.png)">
                     <div class="card-header-slanted-edge">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -732,7 +729,7 @@
             </div>
 
             <!-- Mathus (Anvil) --->
-            <!-- <div class="card faction_card">
+            <div class="card faction_card">
                 <div class="card-header" style="background-image: url(img/characters/anvil_mathus.jpeg)">
                       <div class="card-header-slanted-edge">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -763,7 +760,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Nova -->
             <div class="card mysettlement_card">
@@ -797,6 +794,39 @@
                   </div>
               </div>
             </div>
+			
+			<!-- Ramona -->
+            <div class="card mysettlement_card">
+              <div class="card-header" style="background-image: url(img/characters/ramona.jpg)">
+                    <div class="card-header-slanted-edge">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
+                    </div>
+              </div>
+              <div class="card-body">
+                  <h2 class="name">Ramona</h2>
+                  <div class="bio">Julia's abrasive big sister, she's content with keeping her head down. Gives the feeling that she's running away from something.</div>
+              </div>  
+              <div class="card-footer">
+                  <div class="stats">
+                      <div class="stat">
+                        <span class="label">Combat</span>
+                        <span class="value">C+</span>
+                      </div>
+                      <div class="stat">
+                        <span class="label">Intellect</span>
+                        <span class="value">C+</span>
+                      </div>
+                      <div class="stat">
+                        <span class="label">Agility</span>
+                        <span class="value">C+</span>
+                      </div>
+                      <div class="stat">
+                          <span class="label">Speech</span>
+                          <span class="value">D</span>
+                      </div>
+                  </div>
+              </div>
+            </div>
 
             <!-- Remy -->
             <div class="card mysettlement_card">
@@ -817,7 +847,7 @@
                       </div>
                       <div class="stat">
                         <span class="label">Intellect</span>
-                        <span class="value">C-</span>
+                        <span class="value">D</span>
                       </div>
                       <div class="stat">
                         <span class="label">Agility</span>
@@ -898,7 +928,7 @@
             </div>
 
             <!-- Rixen (Olympia) -->
-            <!-- <div class="card settlement_card">
+            <div class="card settlement_card">
               <div class="card-header" style="background-image: url(img/characters/rixen.jpg)">
                     <div class="card-header-slanted-edge">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -929,10 +959,10 @@
                       </div>
                   </div>
               </div>
-            </div> -->
+            </div>
 
             <!-- Ronnie -->
-            <div class="card settlement_card">
+            <div class="card mysettlement_card">
               <div class="card-header" style="background-image: url(img/characters/ronnie.jpg)">
                     <div class="card-header-slanted-edge">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -1036,9 +1066,10 @@
                       <div class="card-header-slanted-edge">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
                       </div>
-                </div>
+                </div>	
                 <div class="card-body">
                     <h2 class="name">Samantha</h2>
+					<div class="faction-title">Firekeepers</div>
                     <div class="bio">Former leader of the Rebels. She will always stay true to her enduring goal, create a better world for those in need.</div>
                 </div>  
                 <div class="card-footer">
@@ -1049,7 +1080,7 @@
                         </div>
                         <div class="stat">
                           <span class="label">Intellect</span>
-                          <span class="value">B+</span>
+                          <span class="value">B</span>
                         </div>
                         <div class="stat">
                           <span class="label">Agility</span>
@@ -1164,6 +1195,38 @@
               </div>
             </div> -->
 
+			<!-- Tackito -->
+            <div class="card mysettlement_card">
+              <div class="card-header" style="background-image: url(img/characters/tackito.jpg)">
+                    <div class="card-header-slanted-edge">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
+                    </div>
+              </div>
+              <div class="card-body">
+                  <h2 class="name">Tackito</h2>
+                  <div class="bio">Former hydrazine addict given a second chance. An expert tinkerer who's accompanied by his robotic friend CRUD</div>
+              </div>  
+              <div class="card-footer">
+                  <div class="stats">
+                      <div class="stat">
+                        <span class="label">Combat</span>
+                        <span class="value">D+</span>
+                      </div>
+                      <div class="stat">
+                        <span class="label">Intellect</span>
+                        <span class="value">B+</span>
+                      </div>
+                      <div class="stat">
+                        <span class="label">Agility</span>
+                        <span class="value">C</span>
+                      </div>
+                      <div class="stat">
+                          <span class="label">Speech</span>
+                          <span class="value">C</span>
+                      </div>
+                  </div>
+              </div>
+            </div>
 
             <!-- The Guy -->
             <div class="card faction_card">
@@ -1174,6 +1237,7 @@
               </div>
               <div class="card-body">
                   <h2 class="name">The Guy</h2>
+				  <div class="faction-title">Well Wishers</div>
                   <div class="bio">Short in stature but great in mind, he just wants what is best for the greater good. </div>
               </div>  
               <div class="card-footer">
@@ -1402,7 +1466,7 @@
             </div>
 
             <!-- Wendy the Sadistic -->
-            <!-- <div class="card other_card">
+            <div class="card other_card">
               <div class="card-header" style="background-image: url(img/characters/wendy_the_sadistic.jpg)">
                     <div class="card-header-slanted-edge">
                       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -1432,7 +1496,7 @@
                       </div>
                   </div>
               </div>
-            </div> -->
+            </div>
               
             <!-- Winter -->
             <div class="card mysettlement_card">
