--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="js/jquery-3.3.1.js"></script>
 	  <script src="https://code.createjs.com/1.0.0/easeljs.min.js"></script>
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
-
     <script src="https://use.fontawesome.com/f92d7d718d.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <title>Adventure Map 2</title>
@@ -47,14 +46,14 @@
         <!-- Replace with your content -->
         <div class="px-4 py-6 sm:px-0 mx-32 text-white">
           <div class="rounded-lg h-96 ">
-            <p class="text-center py-4 text-4xl font-extrabold">Episode 2: Eclipse...</p>
+            <p class="text-center py-4 text-4xl font-extrabold">Episode 3: Project Ember...</p>
             <p class=" px-64 text-center">
-              Roth, Alvin, Jade, Steven Kelly, and the survivors of HIVE 401 have founded their own
-              settlement. Roth receieved the memories of Tyler after he came out of The End, and has been told to 
-              "Find Juno before the 7 do". It's up to Roth and his allies
-              to find Juno before nefarious forces and to find out what the truth actually is.
+              After a hellish encounter with The Butcher, Ranger Squad Foxtrot return with the key to getting 
+			  into the Project Ember Lab. The technology that sparked a war is now just beneath the surface, its up 
+			  to Roth to sieze it. 
             </p>            
 
+			<!--
             <p class="pt-16 text-4xl text-center">Mysteries</p>
             <ul class="list-inside md:list-disc" style="margin-left: 40%;">
               <p class="pt-4 text-xl">Mr. History and Orbital Industries</p>
@@ -65,15 +64,9 @@
                 <li class="pl-4">The Riverlands Killer: How did he have an Ender Pearl?</li>
                 <li class="pl-4">Where is the Fire Bender and why did they destroy a HIVE?</li>
             </ul>
-
+			-->
           </div>
         </div>
-
-        <!-- <div class="flex flex-wrap justify-around">
-          <div class="bg-white w-40 h-20 m-2 p-1 text-center text-xl rounded-lg">Riverlands Killer</div>
-          <div class="bg-white w-40 h-20 m-2 p-1 text-center text-xl rounded-lg">2</div>
-          <div class="bg-white w-40 h-20 m-2 p-1 text-center text-xl rounded-lg">3</div>
-        </div> -->
       </div>
         <!-- /End replace -->
       </div>
