--- a/characters.html
+++ b/characters.html
@@ -126,7 +126,7 @@
             </div>
 
             <!-- Arnold (Rangers) --->
-            <!-- <div class="card faction_card">
+            <div class="card faction_card">
                 <div class="card-header" style="background-image: url(img/characters/arnold.jpeg)">
                       <div class="card-header-slanted-edge">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200"><path class="polygon" d="M-20,200,1000,0V200Z" /></svg>
@@ -156,7 +156,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Bangheart (Anvil) --->
             <div class="card faction_card">
