--- a/characters.html
+++ b/characters.html
@@ -1050,7 +1050,7 @@
                       </div>
                       <div class="stat">
                         <span class="label">Agility</span>
-                        <span class="value">C</span>
+                        <span class="value">C+</span>
                       </div>
                       <div class="stat">
                           <span class="label">Speech</span>
