--- a/history.html
+++ b/history.html
@@ -303,7 +303,67 @@
           <h2>Episode 4: Project Ember</h2>
           <p> Description </p>
         </div>
-      </div>
+	</div>
+	
+	<div class="box map_2">
+		<div class="img-box"  title="Episode 5: New Haven">
+			<img src="" alt="">
+		</div>
+        <div class="content">
+          <h2>Episode 5: New Haven</h2>
+          <p> Description </p>
+        </div>
+	</div>
+	
+	<div class="box map_2">
+		<div class="img-box"  title="Episode 6: Slaughter">
+			<img src="" alt="">
+		</div>
+        <div class="content">
+          <h2>Episode 6: Slaughter</h2>
+          <p> Description </p>
+        </div>
+	</div>
+	
+	<div class="box map_2">
+		<div class="img-box"  title="Episode 7: History Repeats">
+			<img src="" alt="">
+		</div>
+        <div class="content">
+          <h2>Episode 7: History Repeats</h2>
+          <p> Description </p>
+        </div>
+	</div>
+	
+	<div class="box map_2">
+		<div class="img-box"  title="Episode 8: ">
+			<img src="" alt="">
+		</div>
+        <div class="content">
+          <h2>Episode 8:</h2>
+          <p> Description </p>
+        </div>
+	</div>
+	
+	<div class="box map_2">
+		<div class="img-box"  title="Episode 9: Beyond The Stars">
+			<img src="" alt="">
+		</div>
+        <div class="content">
+          <h2>Episode 9: Beyond The Stars</h2>
+          <p> Description </p>
+        </div>
+	</div>
+	
+	<div class="box map_2">
+		<div class="img-box"  title="Episode 10:">
+			<img src="" alt="">
+		</div>
+        <div class="content">
+          <h2>Episode 10: </h2>
+          <p> Description </p>
+        </div>
+	</div>
 
 
     </div>
