--- a/history.html
+++ b/history.html
@@ -356,11 +356,11 @@
 	</div>
 	
 	<div class="box map_2">
-		<div class="img-box"  title="Episode 10:">
+		<div class="img-box"  title="Episode 10: End of This World">
 			<img src="" alt="">
 		</div>
         <div class="content">
-          <h2>Episode 10: </h2>
+          <h2>Episode 10: End of This World</h2>
           <p> Description </p>
         </div>
 	</div>
