--- a/history.html
+++ b/history.html
@@ -297,7 +297,7 @@
 
 	<div class="box map_2">
 		<div class="img-box"  title="Episode 4: Project Ember">
-			<img src="" alt="">
+			<img src="img/episodes/am2_ep4.jpg" alt="">
 		</div>
         <div class="content">
           <h2>Episode 4: Project Ember</h2>
@@ -307,7 +307,7 @@
 	
 	<div class="box map_2">
 		<div class="img-box"  title="Episode 5: New Haven">
-			<img src="" alt="">
+			<img src="img/episodes/am2_ep5.jpg" alt="">
 		</div>
         <div class="content">
           <h2>Episode 5: New Haven</h2>
@@ -317,7 +317,7 @@
 	
 	<div class="box map_2">
 		<div class="img-box"  title="Episode 6: Slaughter">
-			<img src="" alt="">
+			<img src="img/episodes/am2_ep6.jpg" alt="">
 		</div>
         <div class="content">
           <h2>Episode 6: Slaughter</h2>
@@ -327,7 +327,7 @@
 	
 	<div class="box map_2">
 		<div class="img-box"  title="Episode 7: History Repeats">
-			<img src="" alt="">
+			<img src="img/episodes/am2_ep7.jpg" alt="">
 		</div>
         <div class="content">
           <h2>Episode 7: History Repeats</h2>
@@ -336,18 +336,18 @@
 	</div>
 	
 	<div class="box map_2">
-		<div class="img-box"  title="Episode 8: ">
-			<img src="" alt="">
+		<div class="img-box"  title="Episode 8: What Remains">
+			<img src="img/episodes/am2_ep8.jpg" alt="">
 		</div>
         <div class="content">
-          <h2>Episode 8:</h2>
+          <h2>Episode 8: What Remains</h2>
           <p> Description </p>
         </div>
 	</div>
 	
 	<div class="box map_2">
 		<div class="img-box"  title="Episode 9: Beyond The Stars">
-			<img src="" alt="">
+			<img src="img/episodes/am2_ep9.jpg" alt="">
 		</div>
         <div class="content">
           <h2>Episode 9: Beyond The Stars</h2>
@@ -357,11 +357,11 @@
 	
 	<div class="box map_2">
 		<div class="img-box"  title="Episode 10: End of This World">
-			<img src="" alt="">
+			<img src="img/episodes/am2_ep10.jpg" alt="">
 		</div>
         <div class="content">
           <h2>Episode 10: End of This World</h2>
-          <p> Description </p>
+          <p> Coming Soon... </p>
         </div>
 	</div>
 
