--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
         <!-- Replace with your content -->
         <div class="px-4 py-6 sm:px-0 mx-32 text-white">
           <div class="rounded-lg h-96 ">
-            <p class="text-center py-4 text-4xl font-extrabold">Episode 3: Project Ember...</p>
+            <p class="text-center py-4 text-4xl font-extrabold">Episode 5: Slaughter</p>
             <p class=" px-64 text-center">
-              After a hellish encounter with The Butcher, Ranger Squad Foxtrot return with the key to getting 
-			  into the Project Ember Lab. The technology that sparked a war is now just beneath the surface, its up 
-			  to Roth to sieze it. 
+              Roth secures the secrets to Project Ember,He also finds a familiar face in the Ranger Commander, a welcoming sight during a time
+			  where he doesn't know who to trust.
             </p>            
 
 			<!--
