--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="rounded-lg h-96 ">
             <p class="text-center py-4 text-4xl font-extrabold">Episode 5: Slaughter</p>
             <p class=" px-64 text-center">
-              Roth secures the secrets to Project Ember,He also finds a familiar face in the Ranger Commander, a welcoming sight during a time
+              Roth secures the secrets to Project Ember. He also finds a familiar face in the Ranger Commander, a welcoming sight during a time
 			  where he doesn't know who to trust.
             </p>            
 
